[tool.poetry]
name = "sunflower"
version = "0.1.0"
description = ""
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"
python-dotenv = "^0.10.3"
beautifulsoup4 = "^4.8"
flask = "^1.1"
flask-dotenv = "^0.1.2"
flask-cors = "^3.0"
redis = "^3.3"
daemonize = "^2.5"
mutagen = "^1.43"
backports-datetime-fromisoformat = "^1.0.0"
pytest = "^5.4.1"
click = "^7.1.1"
gunicorn = {extras = ["gevent"], version = "^20.0.4"}

[tool.poetry.dev-dependencies]
rope = "^0.16.0"
pylint = "^2.4.4"
black = "^19.10b0"
pdoc3 = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
