[tool.poetry]
name = "sunflower"
version = "0.1.0"
description = ""
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"
python-dotenv = "^0.10.3"
beautifulsoup4 = "^4.8"
daemonize = "^2.5"
mutagen = "^1.43"
pytest = "^5.4.1"
click = "^7.1.1"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
pydantic = "^1.5.1"
gunicorn = "^20.0.4"
aredis = "^1.1.8"
hy = "^1.0.0a1"
edn-format = "^0.7.5"

[tool.poetry.dev-dependencies]
rope = "^0.16.0"
pylint = "^2.4.4"
black = "^19.10b0"
pdoc3 = "^0.8.1"
ipython = "^7.14.0"
mypy = "^0.770"
pytest-monitor = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
