[tool.poetry]
name = "sunflower"
version = "0.1.0"
description = ""
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
requests = "^2.22"
python-dotenv = "^0.10.3"
beautifulsoup4 = "^4.8"
mutagen = "^1.43"
fastapi = "^0"
uvicorn = "^0.16.0"
pydantic = "^1.5.1"
gunicorn = "^20.0.4"
aredis = "^1.1.8"
edn-format = "^0.7.5"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
ipython = "*"
mypy = "*"
pytest = "*"
autopep8 = "*"
pytype = "^2021.12.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
